@@ -165,7 +165,6 @@ for ANANAME in ANANAMES:
     src = '''\
 // -*- C++ -*-
 #include "Rivet/Analysis.hh"
-#include "Rivet/RivetYODA.hh"
 #include "Rivet/Tools/Logging.hh"
 #include "Rivet/Projections/FinalState.hh"
 /// @todo Include more projections as required, e.g. ChargedFinalState, FastJets, ZFinder...
